--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,4 +24,4 @@ services:
     volumes:
       - 'db-data:/var/lib/postgresql/data'
     environment:
-      - 'POSTGRES_HOST_AUTH_METHOD='true'
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
